1.6.4

Support for read only (watch) HD accounts.
Support for read only (watch) HD seeds.
Add a special warning if the users wallet.dat is readonly (instead of displaying a generic/scary 'corrupted wallet' message)
Add new command line flag '-coinbasesignature=' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
UI - Improvements to send dialog, improve handling when user tries to send amounts equal too or larger than available balance.
UI - New menu item for importing private keys.
UI - New menu item to allow users to easily rescan without having to use command line flags or mess around in RPC console.
UI - Improve the way rescan (and other actions that require progress) display in the program.
UI - Fix a bug where transaction screen would sometimes show transactions for all accounts instead of just the active one.
RPC - Modify createaccount command so that it can also create legacy accounts.
RPC - New commands for read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
RPC - New command for read only (watch) HD seeds, getreadonlyseed.
RPC - New 'deleteaccount' command
RPC - Modify 'move' command so that it can handle `-1` as input for the amount field, passing '-1' will calculate the available balance in the account for the confirmation level passed and transfer all of it.
RPC - Merge a bug fix from user 'mezrin' for 'dumpwallet' command.
RPC - Fix a bug in command 'gettransaction' where transaction would not show if 'rpconlylistsecuredtransactions' flag was set to false.
Assorted other minor bug fixes.

1.6.3

RPC - Fix incorrect getaddressesbyaccount output.
Fix a possible crash in the checkpoint system.

1.6.2

RPC - Bring back command that was removed in 1.6.0, adapted to the new account system - getaccount "Guldenaddress"
RPC - Bring back command that was removed in 1.6.0, adapted to the new account system - getaddressesbyaccount "account"

1.6.1

Minor bugfix release.

1.6.0
